Fixes the style of disabled overflow monitor

--- a/css/sr5.css
+++ b/css/sr5.css
@@ -1050,6 +1050,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 .app.window-app.actor .window-content .SR-CaseNeutralDarkColor {
   background: #000001;
+  border: 1px solid #97b79f;
 }
 .app.window-app.actor .window-content .SR-CaseMainColor {
   background: #931004;
